testing/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> master
Rule 1     master -> program
Rule 2     program -> function
Rule 3     program -> function program
Rule 4     program -> declaration program
Rule 5     program -> prototype program
Rule 6     prototype -> TYPE NAME LPAREN paramlist RPAREN SEMICOLON
Rule 7     prototype -> TYPE specialvar LPAREN paramlist RPAREN SEMICOLON
Rule 8     allthestars -> TIMES
Rule 9     allthestars -> TIMES allthestars
Rule 10    function -> TYPE NAME LPAREN paramlist RPAREN LBRACE fbody RBRACE
Rule 11    function -> TYPE specialvar LPAREN paramlist RPAREN LBRACE fbody RBRACE
Rule 12    paramlist -> <empty>
Rule 13    paramlist -> TYPE NAME paramlist2
Rule 14    paramlist -> TYPE specialvar paramlist2
Rule 15    paramlist2 -> <empty>
Rule 16    paramlist2 -> COMMA TYPE NAME paramlist2
Rule 17    paramlist2 -> COMMA TYPE specialvar paramlist2
Rule 18    fbody -> allstatement fbody
Rule 19    fbody -> <empty>
Rule 20    allstatement -> statement
Rule 21    allstatement -> unmatchedstatement
Rule 22    statement -> assignment
Rule 23    statement -> declaration
Rule 24    statement -> whileblock
Rule 25    statement -> ifblock
Rule 26    statement -> returnstatement
Rule 27    statement -> functioncall SEMICOLON
Rule 28    returnstatement -> RETURN expression SEMICOLON
Rule 29    returnstatement -> RETURN SEMICOLON
Rule 30    functioncall -> NAME LPAREN arguments RPAREN
Rule 31    arguments -> expression
Rule 32    arguments -> expression COMMA arguments
Rule 33    statement -> SEMICOLON
Rule 34    unmatchedstatement -> IF LPAREN conditional RPAREN allstatement
Rule 35    unmatchedstatement -> IF LPAREN conditional RPAREN statement ELSE unmatchedstatement
Rule 36    unmatchedstatement -> IF LPAREN conditional RPAREN LBRACE fbody RBRACE ELSE unmatchedstatement
Rule 37    unmatchedstatement -> IF LPAREN conditional RPAREN LBRACE fbody RBRACE
Rule 38    ifblock -> IF LPAREN conditional RPAREN statement ELSE statement
Rule 39    ifblock -> IF LPAREN conditional RPAREN statement ELSE LBRACE fbody RBRACE
Rule 40    ifblock -> IF LPAREN conditional RPAREN LBRACE fbody RBRACE ELSE LBRACE fbody RBRACE
Rule 41    ifblock -> IF LPAREN conditional RPAREN LBRACE fbody RBRACE ELSE statement
Rule 42    whileblock -> WHILE LPAREN conditional RPAREN LBRACE fbody RBRACE
Rule 43    conditional -> LPAREN conditional RPAREN
Rule 44    conditional -> conditionbase
Rule 45    conditional -> NOT LPAREN conditional RPAREN
Rule 46    conditional -> conditional LESSTHANEQ conditional
Rule 47    conditional -> conditional GREATERTHANEQ conditional
Rule 48    conditional -> conditional UNEQUAL conditional
Rule 49    conditional -> conditional EQUALCHECK conditional
Rule 50    conditional -> conditional LESSTHAN conditional
Rule 51    conditional -> conditional GREATERTHAN conditional
Rule 52    conditional -> conditional ANDOPERATOR conditional
Rule 53    conditional -> conditional OROPERATOR conditional
Rule 54    conditionbase -> CS LESSTHANEQ CS
Rule 55    conditionbase -> CS GREATERTHANEQ CS
Rule 56    conditionbase -> CS UNEQUAL CS
Rule 57    conditionbase -> CS EQUALCHECK CS
Rule 58    conditionbase -> CS LESSTHAN CS
Rule 59    conditionbase -> CS GREATERTHAN CS
Rule 60    CS -> expression
Rule 61    CS -> NOT LPAREN expression RPAREN
Rule 62    declaration -> TYPE dlist1 SEMICOLON
Rule 63    dlist1 -> NAME
Rule 64    dlist1 -> NAME COMMA dlist1
Rule 65    dlist1 -> specialvar
Rule 66    dlist1 -> specialvar COMMA dlist1
Rule 67    specialvar -> TIMES specialvar
Rule 68    specialvar -> TIMES NAME
Rule 69    assignment -> assignment_base SEMICOLON
Rule 70    assignment_base -> TIMES pointervar EQUALS expression
Rule 71    assignment_base -> NAME EQUALS expression
Rule 72    expression -> functioncall
Rule 73    expression -> expression PLUS expression
Rule 74    expression -> expression MINUS expression
Rule 75    expression -> expression DIVIDE expression
Rule 76    expression -> expression TIMES expression
Rule 77    expression -> MINUS expression
Rule 78    expression -> LPAREN expression RPAREN
Rule 79    expression -> allnumbers
Rule 80    allnumbers -> FLOAT
Rule 81    allnumbers -> NUMBER
Rule 82    expression -> pointervar
Rule 83    pointervar -> TIMES pointervar
Rule 84    pointervar -> ADDROF pointervar
Rule 85    pointervar -> NAME

Terminals, with rules where they appear

ADDROF               : 84
ANDOPERATOR          : 52
COMMA                : 16 17 32 64 66
DIVIDE               : 75
ELSE                 : 35 36 38 39 40 41
EQUALCHECK           : 49 57
EQUALS               : 70 71
FLOAT                : 80
GREATERTHAN          : 51 59
GREATERTHANEQ        : 47 55
IF                   : 34 35 36 37 38 39 40 41
LBRACE               : 10 11 36 37 39 40 40 41 42
LESSTHAN             : 50 58
LESSTHANEQ           : 46 54
LPAREN               : 6 7 10 11 30 34 35 36 37 38 39 40 41 42 43 45 61 78
MINUS                : 74 77
NAME                 : 6 10 13 16 30 63 64 68 71 85
NOT                  : 45 61
NUMBER               : 81
OROPERATOR           : 53
PLUS                 : 73
RBRACE               : 10 11 36 37 39 40 40 41 42
RETURN               : 28 29
RPAREN               : 6 7 10 11 30 34 35 36 37 38 39 40 41 42 43 45 61 78
SEMICOLON            : 6 7 27 28 29 33 62 69
TIMES                : 8 9 67 68 70 76 83
TYPE                 : 6 7 10 11 13 14 16 17 62
UNEQUAL              : 48 56
WHILE                : 42
error                : 

Nonterminals, with rules where they appear

CS                   : 54 54 55 55 56 56 57 57 58 58 59 59
allnumbers           : 79
allstatement         : 18 34
allthestars          : 9
arguments            : 30 32
assignment           : 22
assignment_base      : 69
conditional          : 34 35 36 37 38 39 40 41 42 43 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53
conditionbase        : 44
declaration          : 4 23
dlist1               : 62 64 66
expression           : 28 31 32 60 61 70 71 73 73 74 74 75 75 76 76 77 78
fbody                : 10 11 18 36 37 39 40 40 41 42
function             : 2 3
functioncall         : 27 72
ifblock              : 25
master               : 0
paramlist            : 6 7 10 11
paramlist2           : 13 14 16 17
pointervar           : 70 82 83 84
program              : 1 3 4 5
prototype            : 5
returnstatement      : 26
specialvar           : 7 11 14 17 65 66 67
statement            : 20 35 38 38 39 41
unmatchedstatement   : 21 35 36
whileblock           : 24

Parsing method: LALR

state 0

    (0) S' -> . master
    (1) master -> . program
    (2) program -> . function
    (3) program -> . function program
    (4) program -> . declaration program
    (5) program -> . prototype program
    (10) function -> . TYPE NAME LPAREN paramlist RPAREN LBRACE fbody RBRACE
    (11) function -> . TYPE specialvar LPAREN paramlist RPAREN LBRACE fbody RBRACE
    (62) declaration -> . TYPE dlist1 SEMICOLON
    (6) prototype -> . TYPE NAME LPAREN paramlist RPAREN SEMICOLON
    (7) prototype -> . TYPE specialvar LPAREN paramlist RPAREN SEMICOLON

    TYPE            shift and go to state 5

    program                        shift and go to state 1
    function                       shift and go to state 2
    master                         shift and go to state 4
    prototype                      shift and go to state 6
    declaration                    shift and go to state 3

state 1

    (1) master -> program .

    $end            reduce using rule 1 (master -> program .)


state 2

    (2) program -> function .
    (3) program -> function . program
    (2) program -> . function
    (3) program -> . function program
    (4) program -> . declaration program
    (5) program -> . prototype program
    (10) function -> . TYPE NAME LPAREN paramlist RPAREN LBRACE fbody RBRACE
    (11) function -> . TYPE specialvar LPAREN paramlist RPAREN LBRACE fbody RBRACE
    (62) declaration -> . TYPE dlist1 SEMICOLON
    (6) prototype -> . TYPE NAME LPAREN paramlist RPAREN SEMICOLON
    (7) prototype -> . TYPE specialvar LPAREN paramlist RPAREN SEMICOLON

    $end            reduce using rule 2 (program -> function .)
    TYPE            shift and go to state 5

    program                        shift and go to state 7
    function                       shift and go to state 2
    prototype                      shift and go to state 6
    declaration                    shift and go to state 3

state 3

    (4) program -> declaration . program
    (2) program -> . function
    (3) program -> . function program
    (4) program -> . declaration program
    (5) program -> . prototype program
    (10) function -> . TYPE NAME LPAREN paramlist RPAREN LBRACE fbody RBRACE
    (11) function -> . TYPE specialvar LPAREN paramlist RPAREN LBRACE fbody RBRACE
    (62) declaration -> . TYPE dlist1 SEMICOLON
    (6) prototype -> . TYPE NAME LPAREN paramlist RPAREN SEMICOLON
    (7) prototype -> . TYPE specialvar LPAREN paramlist RPAREN SEMICOLON

    TYPE            shift and go to state 5

    program                        shift and go to state 8
    function                       shift and go to state 2
    prototype                      shift and go to state 6
    declaration                    shift and go to state 3

state 4

    (0) S' -> master .



state 5

    (10) function -> TYPE . NAME LPAREN paramlist RPAREN LBRACE fbody RBRACE
    (11) function -> TYPE . specialvar LPAREN paramlist RPAREN LBRACE fbody RBRACE
    (62) declaration -> TYPE . dlist1 SEMICOLON
    (6) prototype -> TYPE . NAME LPAREN paramlist RPAREN SEMICOLON
    (7) prototype -> TYPE . specialvar LPAREN paramlist RPAREN SEMICOLON
    (67) specialvar -> . TIMES specialvar
    (68) specialvar -> . TIMES NAME
    (63) dlist1 -> . NAME
    (64) dlist1 -> . NAME COMMA dlist1
    (65) dlist1 -> . specialvar
    (66) dlist1 -> . specialvar COMMA dlist1

    NAME            shift and go to state 10
    TIMES           shift and go to state 12

    specialvar                     shift and go to state 11
    dlist1                         shift and go to state 9

state 6

    (5) program -> prototype . program
    (2) program -> . function
    (3) program -> . function program
    (4) program -> . declaration program
    (5) program -> . prototype program
    (10) function -> . TYPE NAME LPAREN paramlist RPAREN LBRACE fbody RBRACE
    (11) function -> . TYPE specialvar LPAREN paramlist RPAREN LBRACE fbody RBRACE
    (62) declaration -> . TYPE dlist1 SEMICOLON
    (6) prototype -> . TYPE NAME LPAREN paramlist RPAREN SEMICOLON
    (7) prototype -> . TYPE specialvar LPAREN paramlist RPAREN SEMICOLON

    TYPE            shift and go to state 5

    program                        shift and go to state 13
    function                       shift and go to state 2
    prototype                      shift and go to state 6
    declaration                    shift and go to state 3

state 7

    (3) program -> function program .

    $end            reduce using rule 3 (program -> function program .)


state 8

    (4) program -> declaration program .

    $end            reduce using rule 4 (program -> declaration program .)


state 9

    (62) declaration -> TYPE dlist1 . SEMICOLON

    SEMICOLON       shift and go to state 14


state 10

    (10) function -> TYPE NAME . LPAREN paramlist RPAREN LBRACE fbody RBRACE
    (6) prototype -> TYPE NAME . LPAREN paramlist RPAREN SEMICOLON
    (63) dlist1 -> NAME .
    (64) dlist1 -> NAME . COMMA dlist1

    LPAREN          shift and go to state 15
    SEMICOLON       reduce using rule 63 (dlist1 -> NAME .)
    COMMA           shift and go to state 16


state 11

    (11) function -> TYPE specialvar . LPAREN paramlist RPAREN LBRACE fbody RBRACE
    (7) prototype -> TYPE specialvar . LPAREN paramlist RPAREN SEMICOLON
    (65) dlist1 -> specialvar .
    (66) dlist1 -> specialvar . COMMA dlist1

    LPAREN          shift and go to state 17
    SEMICOLON       reduce using rule 65 (dlist1 -> specialvar .)
    COMMA           shift and go to state 18


state 12

    (67) specialvar -> TIMES . specialvar
    (68) specialvar -> TIMES . NAME
    (67) specialvar -> . TIMES specialvar
    (68) specialvar -> . TIMES NAME

    NAME            shift and go to state 19
    TIMES           shift and go to state 12

    specialvar                     shift and go to state 20

state 13

    (5) program -> prototype program .

    $end            reduce using rule 5 (program -> prototype program .)


state 14

    (62) declaration -> TYPE dlist1 SEMICOLON .

    SEMICOLON       reduce using rule 62 (declaration -> TYPE dlist1 SEMICOLON .)
    IF              reduce using rule 62 (declaration -> TYPE dlist1 SEMICOLON .)
    TYPE            reduce using rule 62 (declaration -> TYPE dlist1 SEMICOLON .)
    WHILE           reduce using rule 62 (declaration -> TYPE dlist1 SEMICOLON .)
    RETURN          reduce using rule 62 (declaration -> TYPE dlist1 SEMICOLON .)
    NAME            reduce using rule 62 (declaration -> TYPE dlist1 SEMICOLON .)
    TIMES           reduce using rule 62 (declaration -> TYPE dlist1 SEMICOLON .)
    RBRACE          reduce using rule 62 (declaration -> TYPE dlist1 SEMICOLON .)
    ELSE            reduce using rule 62 (declaration -> TYPE dlist1 SEMICOLON .)


state 15

    (10) function -> TYPE NAME LPAREN . paramlist RPAREN LBRACE fbody RBRACE
    (6) prototype -> TYPE NAME LPAREN . paramlist RPAREN SEMICOLON
    (12) paramlist -> .
    (13) paramlist -> . TYPE NAME paramlist2
    (14) paramlist -> . TYPE specialvar paramlist2

    RPAREN          reduce using rule 12 (paramlist -> .)
    TYPE            shift and go to state 21

    paramlist                      shift and go to state 22

state 16

    (64) dlist1 -> NAME COMMA . dlist1
    (63) dlist1 -> . NAME
    (64) dlist1 -> . NAME COMMA dlist1
    (65) dlist1 -> . specialvar
    (66) dlist1 -> . specialvar COMMA dlist1
    (67) specialvar -> . TIMES specialvar
    (68) specialvar -> . TIMES NAME

    NAME            shift and go to state 23
    TIMES           shift and go to state 12

    dlist1                         shift and go to state 24
    specialvar                     shift and go to state 25

state 17

    (11) function -> TYPE specialvar LPAREN . paramlist RPAREN LBRACE fbody RBRACE
    (7) prototype -> TYPE specialvar LPAREN . paramlist RPAREN SEMICOLON
    (12) paramlist -> .
    (13) paramlist -> . TYPE NAME paramlist2
    (14) paramlist -> . TYPE specialvar paramlist2

    RPAREN          reduce using rule 12 (paramlist -> .)
    TYPE            shift and go to state 21

    paramlist                      shift and go to state 26

state 18

    (66) dlist1 -> specialvar COMMA . dlist1
    (63) dlist1 -> . NAME
    (64) dlist1 -> . NAME COMMA dlist1
    (65) dlist1 -> . specialvar
    (66) dlist1 -> . specialvar COMMA dlist1
    (67) specialvar -> . TIMES specialvar
    (68) specialvar -> . TIMES NAME

    NAME            shift and go to state 23
    TIMES           shift and go to state 12

    dlist1                         shift and go to state 27
    specialvar                     shift and go to state 25

state 19

    (68) specialvar -> TIMES NAME .

    COMMA           reduce using rule 68 (specialvar -> TIMES NAME .)
    RPAREN          reduce using rule 68 (specialvar -> TIMES NAME .)
    SEMICOLON       reduce using rule 68 (specialvar -> TIMES NAME .)
    LPAREN          reduce using rule 68 (specialvar -> TIMES NAME .)


state 20

    (67) specialvar -> TIMES specialvar .

    COMMA           reduce using rule 67 (specialvar -> TIMES specialvar .)
    RPAREN          reduce using rule 67 (specialvar -> TIMES specialvar .)
    SEMICOLON       reduce using rule 67 (specialvar -> TIMES specialvar .)
    LPAREN          reduce using rule 67 (specialvar -> TIMES specialvar .)


state 21

    (13) paramlist -> TYPE . NAME paramlist2
    (14) paramlist -> TYPE . specialvar paramlist2
    (67) specialvar -> . TIMES specialvar
    (68) specialvar -> . TIMES NAME

    NAME            shift and go to state 28
    TIMES           shift and go to state 12

    specialvar                     shift and go to state 29

state 22

    (10) function -> TYPE NAME LPAREN paramlist . RPAREN LBRACE fbody RBRACE
    (6) prototype -> TYPE NAME LPAREN paramlist . RPAREN SEMICOLON

    RPAREN          shift and go to state 30


state 23

    (63) dlist1 -> NAME .
    (64) dlist1 -> NAME . COMMA dlist1

    SEMICOLON       reduce using rule 63 (dlist1 -> NAME .)
    COMMA           shift and go to state 16


state 24

    (64) dlist1 -> NAME COMMA dlist1 .

    SEMICOLON       reduce using rule 64 (dlist1 -> NAME COMMA dlist1 .)


state 25

    (65) dlist1 -> specialvar .
    (66) dlist1 -> specialvar . COMMA dlist1

    SEMICOLON       reduce using rule 65 (dlist1 -> specialvar .)
    COMMA           shift and go to state 18


state 26

    (11) function -> TYPE specialvar LPAREN paramlist . RPAREN LBRACE fbody RBRACE
    (7) prototype -> TYPE specialvar LPAREN paramlist . RPAREN SEMICOLON

    RPAREN          shift and go to state 31


state 27

    (66) dlist1 -> specialvar COMMA dlist1 .

    SEMICOLON       reduce using rule 66 (dlist1 -> specialvar COMMA dlist1 .)


state 28

    (13) paramlist -> TYPE NAME . paramlist2
    (15) paramlist2 -> .
    (16) paramlist2 -> . COMMA TYPE NAME paramlist2
    (17) paramlist2 -> . COMMA TYPE specialvar paramlist2

    RPAREN          reduce using rule 15 (paramlist2 -> .)
    COMMA           shift and go to state 33

    paramlist2                     shift and go to state 32

state 29

    (14) paramlist -> TYPE specialvar . paramlist2
    (15) paramlist2 -> .
    (16) paramlist2 -> . COMMA TYPE NAME paramlist2
    (17) paramlist2 -> . COMMA TYPE specialvar paramlist2

    RPAREN          reduce using rule 15 (paramlist2 -> .)
    COMMA           shift and go to state 33

    paramlist2                     shift and go to state 34

state 30

    (10) function -> TYPE NAME LPAREN paramlist RPAREN . LBRACE fbody RBRACE
    (6) prototype -> TYPE NAME LPAREN paramlist RPAREN . SEMICOLON

    LBRACE          shift and go to state 36
    SEMICOLON       shift and go to state 35


state 31

    (11) function -> TYPE specialvar LPAREN paramlist RPAREN . LBRACE fbody RBRACE
    (7) prototype -> TYPE specialvar LPAREN paramlist RPAREN . SEMICOLON

    LBRACE          shift and go to state 38
    SEMICOLON       shift and go to state 37


state 32

    (13) paramlist -> TYPE NAME paramlist2 .

    RPAREN          reduce using rule 13 (paramlist -> TYPE NAME paramlist2 .)


state 33

    (16) paramlist2 -> COMMA . TYPE NAME paramlist2
    (17) paramlist2 -> COMMA . TYPE specialvar paramlist2

    TYPE            shift and go to state 39


state 34

    (14) paramlist -> TYPE specialvar paramlist2 .

    RPAREN          reduce using rule 14 (paramlist -> TYPE specialvar paramlist2 .)


state 35

    (6) prototype -> TYPE NAME LPAREN paramlist RPAREN SEMICOLON .

    TYPE            reduce using rule 6 (prototype -> TYPE NAME LPAREN paramlist RPAREN SEMICOLON .)


state 36

    (10) function -> TYPE NAME LPAREN paramlist RPAREN LBRACE . fbody RBRACE
    (18) fbody -> . allstatement fbody
    (19) fbody -> .
    (20) allstatement -> . statement
    (21) allstatement -> . unmatchedstatement
    (22) statement -> . assignment
    (23) statement -> . declaration
    (24) statement -> . whileblock
    (25) statement -> . ifblock
    (26) statement -> . returnstatement
    (27) statement -> . functioncall SEMICOLON
    (33) statement -> . SEMICOLON
    (34) unmatchedstatement -> . IF LPAREN conditional RPAREN allstatement
    (35) unmatchedstatement -> . IF LPAREN conditional RPAREN statement ELSE unmatchedstatement
    (36) unmatchedstatement -> . IF LPAREN conditional RPAREN LBRACE fbody RBRACE ELSE unmatchedstatement
    (37) unmatchedstatement -> . IF LPAREN conditional RPAREN LBRACE fbody RBRACE
    (69) assignment -> . assignment_base SEMICOLON
    (62) declaration -> . TYPE dlist1 SEMICOLON
    (42) whileblock -> . WHILE LPAREN conditional RPAREN LBRACE fbody RBRACE
    (38) ifblock -> . IF LPAREN conditional RPAREN statement ELSE statement
    (39) ifblock -> . IF LPAREN conditional RPAREN statement ELSE LBRACE fbody RBRACE
    (40) ifblock -> . IF LPAREN conditional RPAREN LBRACE fbody RBRACE ELSE LBRACE fbody RBRACE
    (41) ifblock -> . IF LPAREN conditional RPAREN LBRACE fbody RBRACE ELSE statement
    (28) returnstatement -> . RETURN expression SEMICOLON
    (29) returnstatement -> . RETURN SEMICOLON
    (30) functioncall -> . NAME LPAREN arguments RPAREN
    (70) assignment_base -> . TIMES pointervar EQUALS expression
    (71) assignment_base -> . NAME EQUALS expression

    RBRACE          reduce using rule 19 (fbody -> .)
    SEMICOLON       shift and go to state 53
    IF              shift and go to state 43
    TYPE            shift and go to state 54
    WHILE           shift and go to state 57
    RETURN          shift and go to state 46
    NAME            shift and go to state 48
    TIMES           shift and go to state 55

    returnstatement                shift and go to state 40
    whileblock                     shift and go to state 49
    ifblock                        shift and go to state 41
    declaration                    shift and go to state 42
    statement                      shift and go to state 50
    unmatchedstatement             shift and go to state 51
    fbody                          shift and go to state 52
    assignment_base                shift and go to state 45
    allstatement                   shift and go to state 44
    functioncall                   shift and go to state 47
    assignment                     shift and go to state 56

state 37

    (7) prototype -> TYPE specialvar LPAREN paramlist RPAREN SEMICOLON .

    TYPE            reduce using rule 7 (prototype -> TYPE specialvar LPAREN paramlist RPAREN SEMICOLON .)


state 38

    (11) function -> TYPE specialvar LPAREN paramlist RPAREN LBRACE . fbody RBRACE
    (18) fbody -> . allstatement fbody
    (19) fbody -> .
    (20) allstatement -> . statement
    (21) allstatement -> . unmatchedstatement
    (22) statement -> . assignment
    (23) statement -> . declaration
    (24) statement -> . whileblock
    (25) statement -> . ifblock
    (26) statement -> . returnstatement
    (27) statement -> . functioncall SEMICOLON
    (33) statement -> . SEMICOLON
    (34) unmatchedstatement -> . IF LPAREN conditional RPAREN allstatement
    (35) unmatchedstatement -> . IF LPAREN conditional RPAREN statement ELSE unmatchedstatement
    (36) unmatchedstatement -> . IF LPAREN conditional RPAREN LBRACE fbody RBRACE ELSE unmatchedstatement
    (37) unmatchedstatement -> . IF LPAREN conditional RPAREN LBRACE fbody RBRACE
    (69) assignment -> . assignment_base SEMICOLON
    (62) declaration -> . TYPE dlist1 SEMICOLON
    (42) whileblock -> . WHILE LPAREN conditional RPAREN LBRACE fbody RBRACE
    (38) ifblock -> . IF LPAREN conditional RPAREN statement ELSE statement
    (39) ifblock -> . IF LPAREN conditional RPAREN statement ELSE LBRACE fbody RBRACE
    (40) ifblock -> . IF LPAREN conditional RPAREN LBRACE fbody RBRACE ELSE LBRACE fbody RBRACE
    (41) ifblock -> . IF LPAREN conditional RPAREN LBRACE fbody RBRACE ELSE statement
    (28) returnstatement -> . RETURN expression SEMICOLON
    (29) returnstatement -> . RETURN SEMICOLON
    (30) functioncall -> . NAME LPAREN arguments RPAREN
    (70) assignment_base -> . TIMES pointervar EQUALS expression
    (71) assignment_base -> . NAME EQUALS expression

    RBRACE          reduce using rule 19 (fbody -> .)
    SEMICOLON       shift and go to state 53
    IF              shift and go to state 43
    TYPE            shift and go to state 54
    WHILE           shift and go to state 57
    RETURN          shift and go to state 46
    NAME            shift and go to state 48
    TIMES           shift and go to state 55

    returnstatement                shift and go to state 40
    whileblock                     shift and go to state 49
    ifblock                        shift and go to state 41
    functioncall                   shift and go to state 47
    declaration                    shift and go to state 42
    statement                      shift and go to state 50
    unmatchedstatement             shift and go to state 51
    fbody                          shift and go to state 58
    assignment_base                shift and go to state 45
    allstatement                   shift and go to state 44
    assignment                     shift and go to state 56

state 39

    (16) paramlist2 -> COMMA TYPE . NAME paramlist2
    (17) paramlist2 -> COMMA TYPE . specialvar paramlist2
    (67) specialvar -> . TIMES specialvar
    (68) specialvar -> . TIMES NAME

    NAME            shift and go to state 59
    TIMES           shift and go to state 12

    specialvar                     shift and go to state 60

state 40

    (26) statement -> returnstatement .

    SEMICOLON       reduce using rule 26 (statement -> returnstatement .)
    IF              reduce using rule 26 (statement -> returnstatement .)
    TYPE            reduce using rule 26 (statement -> returnstatement .)
    WHILE           reduce using rule 26 (statement -> returnstatement .)
    RETURN          reduce using rule 26 (statement -> returnstatement .)
    NAME            reduce using rule 26 (statement -> returnstatement .)
    TIMES           reduce using rule 26 (statement -> returnstatement .)
    RBRACE          reduce using rule 26 (statement -> returnstatement .)
    ELSE            reduce using rule 26 (statement -> returnstatement .)


state 41

    (25) statement -> ifblock .

    SEMICOLON       reduce using rule 25 (statement -> ifblock .)
    IF              reduce using rule 25 (statement -> ifblock .)
    TYPE            reduce using rule 25 (statement -> ifblock .)
    WHILE           reduce using rule 25 (statement -> ifblock .)
    RETURN          reduce using rule 25 (statement -> ifblock .)
    NAME            reduce using rule 25 (statement -> ifblock .)
    TIMES           reduce using rule 25 (statement -> ifblock .)
    RBRACE          reduce using rule 25 (statement -> ifblock .)
    ELSE            reduce using rule 25 (statement -> ifblock .)


state 42

    (23) statement -> declaration .

    SEMICOLON       reduce using rule 23 (statement -> declaration .)
    IF              reduce using rule 23 (statement -> declaration .)
    TYPE            reduce using rule 23 (statement -> declaration .)
    WHILE           reduce using rule 23 (statement -> declaration .)
    RETURN          reduce using rule 23 (statement -> declaration .)
    NAME            reduce using rule 23 (statement -> declaration .)
    TIMES           reduce using rule 23 (statement -> declaration .)
    RBRACE          reduce using rule 23 (statement -> declaration .)
    ELSE            reduce using rule 23 (statement -> declaration .)


state 43

    (34) unmatchedstatement -> IF . LPAREN conditional RPAREN allstatement
    (35) unmatchedstatement -> IF . LPAREN conditional RPAREN statement ELSE unmatchedstatement
    (36) unmatchedstatement -> IF . LPAREN conditional RPAREN LBRACE fbody RBRACE ELSE unmatchedstatement
    (37) unmatchedstatement -> IF . LPAREN conditional RPAREN LBRACE fbody RBRACE
    (38) ifblock -> IF . LPAREN conditional RPAREN statement ELSE statement
    (39) ifblock -> IF . LPAREN conditional RPAREN statement ELSE LBRACE fbody RBRACE
    (40) ifblock -> IF . LPAREN conditional RPAREN LBRACE fbody RBRACE ELSE LBRACE fbody RBRACE
    (41) ifblock -> IF . LPAREN conditional RPAREN LBRACE fbody RBRACE ELSE statement

    LPAREN          shift and go to state 61


state 44

    (18) fbody -> allstatement . fbody
    (18) fbody -> . allstatement fbody
    (19) fbody -> .
    (20) allstatement -> . statement
    (21) allstatement -> . unmatchedstatement
    (22) statement -> . assignment
    (23) statement -> . declaration
    (24) statement -> . whileblock
    (25) statement -> . ifblock
    (26) statement -> . returnstatement
    (27) statement -> . functioncall SEMICOLON
    (33) statement -> . SEMICOLON
    (34) unmatchedstatement -> . IF LPAREN conditional RPAREN allstatement
    (35) unmatchedstatement -> . IF LPAREN conditional RPAREN statement ELSE unmatchedstatement
    (36) unmatchedstatement -> . IF LPAREN conditional RPAREN LBRACE fbody RBRACE ELSE unmatchedstatement
    (37) unmatchedstatement -> . IF LPAREN conditional RPAREN LBRACE fbody RBRACE
    (69) assignment -> . assignment_base SEMICOLON
    (62) declaration -> . TYPE dlist1 SEMICOLON
    (42) whileblock -> . WHILE LPAREN conditional RPAREN LBRACE fbody RBRACE
    (38) ifblock -> . IF LPAREN conditional RPAREN statement ELSE statement
    (39) ifblock -> . IF LPAREN conditional RPAREN statement ELSE LBRACE fbody RBRACE
    (40) ifblock -> . IF LPAREN conditional RPAREN LBRACE fbody RBRACE ELSE LBRACE fbody RBRACE
    (41) ifblock -> . IF LPAREN conditional RPAREN LBRACE fbody RBRACE ELSE statement
    (28) returnstatement -> . RETURN expression SEMICOLON
    (29) returnstatement -> . RETURN SEMICOLON
    (30) functioncall -> . NAME LPAREN arguments RPAREN
    (70) assignment_base -> . TIMES pointervar EQUALS expression
    (71) assignment_base -> . NAME EQUALS expression

    RBRACE          reduce using rule 19 (fbody -> .)
    SEMICOLON       shift and go to state 53
    IF              shift and go to state 43
    TYPE            shift and go to state 54
    WHILE           shift and go to state 57
    RETURN          shift and go to state 46
    NAME            shift and go to state 48
    TIMES           shift and go to state 55

    returnstatement                shift and go to state 40
    ifblock                        shift and go to state 41
    declaration                    shift and go to state 42
    statement                      shift and go to state 50
    assignment                     shift and go to state 56
    fbody                          shift and go to state 62
    allstatement                   shift and go to state 44
    assignment_base                shift and go to state 45
    functioncall                   shift and go to state 47
    unmatchedstatement             shift and go to state 51
    whileblock                     shift and go to state 49

state 45

    (69) assignment -> assignment_base . SEMICOLON

    SEMICOLON       shift and go to state 63


state 46

    (28) returnstatement -> RETURN . expression SEMICOLON
    (29) returnstatement -> RETURN . SEMICOLON
    (72) expression -> . functioncall
    (73) expression -> . expression PLUS expression
    (74) expression -> . expression MINUS expression
    (75) expression -> . expression DIVIDE expression
    (76) expression -> . expression TIMES expression
    (77) expression -> . MINUS expression
    (78) expression -> . LPAREN expression RPAREN
    (79) expression -> . allnumbers
    (82) expression -> . pointervar
    (30) functioncall -> . NAME LPAREN arguments RPAREN
    (80) allnumbers -> . FLOAT
    (81) allnumbers -> . NUMBER
    (83) pointervar -> . TIMES pointervar
    (84) pointervar -> . ADDROF pointervar
    (85) pointervar -> . NAME

    SEMICOLON       shift and go to state 69
    MINUS           shift and go to state 68
    LPAREN          shift and go to state 64
    NAME            shift and go to state 67
    FLOAT           shift and go to state 66
    NUMBER          shift and go to state 65
    TIMES           shift and go to state 75
    ADDROF          shift and go to state 71

    pointervar                     shift and go to state 72
    allnumbers                     shift and go to state 73
    functioncall                   shift and go to state 74
    expression                     shift and go to state 70

state 47

    (27) statement -> functioncall . SEMICOLON

    SEMICOLON       shift and go to state 76


state 48

    (30) functioncall -> NAME . LPAREN arguments RPAREN
    (71) assignment_base -> NAME . EQUALS expression

    LPAREN          shift and go to state 77
    EQUALS          shift and go to state 78


state 49

    (24) statement -> whileblock .

    SEMICOLON       reduce using rule 24 (statement -> whileblock .)
    IF              reduce using rule 24 (statement -> whileblock .)
    TYPE            reduce using rule 24 (statement -> whileblock .)
    WHILE           reduce using rule 24 (statement -> whileblock .)
    RETURN          reduce using rule 24 (statement -> whileblock .)
    NAME            reduce using rule 24 (statement -> whileblock .)
    TIMES           reduce using rule 24 (statement -> whileblock .)
    RBRACE          reduce using rule 24 (statement -> whileblock .)
    ELSE            reduce using rule 24 (statement -> whileblock .)


state 50

    (20) allstatement -> statement .

    SEMICOLON       reduce using rule 20 (allstatement -> statement .)
    IF              reduce using rule 20 (allstatement -> statement .)
    TYPE            reduce using rule 20 (allstatement -> statement .)
    WHILE           reduce using rule 20 (allstatement -> statement .)
    RETURN          reduce using rule 20 (allstatement -> statement .)
    NAME            reduce using rule 20 (allstatement -> statement .)
    TIMES           reduce using rule 20 (allstatement -> statement .)
    RBRACE          reduce using rule 20 (allstatement -> statement .)


state 51

    (21) allstatement -> unmatchedstatement .
